[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "input_output_utils"
version = "0.0.1"
authors = [
    { name="Austin Snyder", email="austin-snyder@uiowa.edu" },
]
description = "Input and output utilities for HPINV processes."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "pandas",
    "numpy",
    "xlsxwriter"
]